--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,16 @@
 [build]
-  command = "CI=false npm run build"
+  command = "npm install --legacy-peer-deps && CI=false npm run build"
   publish = "build"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "18.17.0"
+  NPM_VERSION = "9.6.7"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.processing]
+  skip_processing = false
