--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
+    "@mistralai/mistralai": "1.5.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "3d-force-graph": "^1.72.3",
+    "cohere-ai": "7.15.4",
     "framer-motion": "^10.16.16",
     "groq-sdk": "0.15.0",
     "i18next": "^23.7.16",
