--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@google/generative-ai": "^0.1.3",
+    "@google/generative-ai": "0.1.3",
     "@mistralai/mistralai": "1.5.0",
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
-    "3d-force-graph": "^1.72.3",
+    "@react-three/drei": "9.92.7",
+    "@react-three/fiber": "8.15.12",
+    "3d-force-graph": "1.72.3",
     "cohere-ai": "7.15.4",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "10.16.16",
     "groq-sdk": "0.15.0",
-    "i18next": "^23.7.16",
-    "i18next-browser-languagedetector": "^7.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.0",
-    "react-icons": "^5.4.0",
+    "i18next": "23.7.16",
+    "i18next-browser-languagedetector": "7.2.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "14.0.0",
+    "react-icons": "5.4.0",
     "react-scripts": "5.0.1",
-    "three": "^0.160.0"
+    "three": "0.160.0"
   },
   "scripts": {
     "start": "react-scripts start",
