--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 legacy-peer-deps=true
-strict-ssl=false
-save-exact=true
+strict-peer-dependencies=false
+auto-install-peers=true
+node-options=--max-old-space-size=4096
