--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "3d-force-graph": "1.72.3",
     "ajv": "8.12.0",
     "cohere-ai": "7.15.4",
+    "cross-env": "7.0.3",
     "framer-motion": "10.16.16",
     "groq-sdk": "0.15.0",
     "i18next": "23.7.16",
@@ -21,12 +22,17 @@
     "react-scripts": "5.0.1",
     "three": "0.160.0"
   },
-  "resolutions": {
-    "ajv": "8.12.0"
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.0"
+  },
+  "overrides": {
+    "ajv": "8.12.0",
+    "typescript": "4.9.5",
+    "@babel/plugin-transform-private-property-in-object": "7.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "cross-env GENERATE_SOURCEMAP=false CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
